manifest/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-backend-deployment
  namespace: k8s-todo-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-backend
  template:
    metadata:
      labels:
        app: k8s-backend
    spec:
      containers:
        - name: k8s-backend-app
          image: k8s-backend-app:dev
          ports:
            - containerPort: 4020
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-service
  namespace: k8s-todo-app

spec:
  selector:
    app: k8s-backend
  ports:
    - name: http
      port: 4020
      targetPort: 4020
  type: ClusterIP
