manifest/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend-deployment
  namespace: k8s-todo-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
        - name: k8s-frontend-app
          image: k8s-frontend-app:dev
          ports:
            - containerPort: 4010
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-service
  namespace: k8s-todo-app

spec:
  selector:
    app: k8s-frontend
  ports:
    - name: http
      port: 4010
      targetPort: 4010
      nodePort: 30010
  type: NodePort
